# researchmind-pro

./: .gitignore  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  project_structure.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: graph.py  llm_factory.py  nodes.py  prompts.py  runner.py  tools.py
backend/app/api/: deps.py  health.py  knowledge.py  tasks.py
backend/app/db/: database.py  init.sql  repositories.py
backend/app/mcp_server/: claude_desktop_config.json  server.py
backend/app/memory/: store.py
backend/app/models/: __init__.py  agent.py  document.py  task.py
backend/app/rag/: __init__.py  embeddings.py  ingestion.py  retriever.py
backend/app/utils/: logging.py  tracing.py
backend/test1/: test_api.md  test_graph.py  test_models.py  test_rag.py
backend/tests/: README.md  conftest.py  pytest.ini
backend/tests/eval/: test_golden_dataset.py
backend/tests/integration/agents/: test_agents.py
backend/tests/unit/api/: test_routes.py
backend/tests/unit/models/: test_models.py
backend/tests/unit/rag/: test_rag_pipeline.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  health.ts  index.ts  knowledge.ts  tasks.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: EmptyState.tsx  LoadingSkeleton.tsx  StatusBadge.tsx
frontend/src/hooks/: useKnowledgeQuery.ts  useSSE.ts  useTaskQuery.ts
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/knowledge/: KnowledgePage.tsx
frontend/src/pages/tasks/: TasksPage.tsx
frontend/src/store/: authStore.ts  taskStore.ts
frontend/src/types/: document.ts  health.ts  index.ts  task.ts
