[project]
name = "researchmind-pro"
version = "2.0.0"
description = "Enterprise Multi-Agent Intelligent Research System"
requires-python = ">=3.11"

dependencies = [
    # ── Web Framework ──────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",       # 文件上传
    # ── Async & HTTP ───────────────────────────────
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    # ── Config & Validation ────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # ── LangChain / LangGraph ──────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",   # 可选，有 Anthropic Key 时使用
    "langchain-community>=0.3.0",
    "langgraph>=0.2.30",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.1.120",
    # ── RAG ───────────────────────────────────────
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-parse>=0.5.0",
    "qdrant-client>=1.11.0",
    "langchain-qdrant>=0.2.0",
    "cohere>=5.9.0",                 # Rerank
    # ── Memory ────────────────────────────────────
    "langmem>=0.0.10",
    # ── Database ──────────────────────────────────
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",               # PostgreSQL async driver
    "alembic>=1.13.0",               # DB migrations
    "redis>=5.1.0",
    "aioredis>=2.0.0",
    # ── Auth & Security ───────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    # ── Observability ─────────────────────────────
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    # ── Utilities ─────────────────────────────────
    "tenacity>=9.0.0",               # 重试
    "tiktoken>=0.7.0",               # Token 计数
    "python-slugify>=8.0.0",
    "structlog>=24.4.0",             # 结构化日志
    "rich>=13.8.0",                  # 终端美化
    "psycopg[binary]>=3.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                 # TestClient
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff (Linter) ─────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── MyPy ──────────────────────────────────────────
[tool.mypy]
# 替换 backend/pyproject.toml 里的 [tool.mypy] 段落
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
no_implicit_optional = false      # 允许 def f(x: dict = None) 写法
exclude = ["tests/"]

# 第三方库类型不完整，逐模块忽略
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_qdrant.*",
    "langchain_community.*",
    "qdrant_client.*",
    "structlog.*",
    "langmem.*",
    "llama_index.*",
    "langsmith.*",
]
ignore_errors = true

# ── Pytest ────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ── Coverage ──────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/db/init.sql"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.5",
]
